feat(debug): download als .txt, log-rotation & env-header

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
               <a class="btn-ghost" id="dev-open-firestore" target="_blank" rel="noopener">Firestore-Console</a>
               <div id="debug-panel" class="debug-panel hidden">
                 <pre id="debug-log"></pre>
-                <button id="debug-copy" class="btn-ghost sm">Alles kopieren</button>
+                <div style="display:flex;gap:8px;flex-wrap:wrap">
+                  <button id="debug-copy" class="btn-ghost sm">Alles kopieren</button>
+                  <button id="debug-download" class="btn-ghost sm">Als TXT herunterladen</button>
+                </div>
               </div>
             </div>
           </div>
