--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -243,7 +243,7 @@
       try{
         statusCustomer.set('saving',{withSpinnerOn: spinnerSel||'#btn-save-customer'});
         const c = collect();
-        const res = await window.dfsCloud.saveOne('dfs.customers', c.id, c);
+        const res = await window.dfsCloud.saveOne((window.DFS_COLLECTIONS&&DFS_COLLECTIONS.customers)||'dfs.customers', c.id, c);
         if(window.dfs && window.dfs.debug) console.info('[DFS] save customer', { id:c.id, ok:res?.ok, code:res?.code });
         if(res && res.ok){ statusCustomer.set('saved',{withSpinnerOn: spinnerSel||'#btn-save-customer'}); hideRetry(); if(!silent){ window.dfsToastKeyed && dfsToastKeyed('save-ok','Kunde gespeichert','success',1500); } if(!window._qs.get('id')){ history.replaceState({},'',`?id=${encodeURIComponent(id)}`); $('delete').style.display='inline-block'; } }
         else { setErrorDirty('#btn-save-customer'); showRetry(); window.dfsToastKeyed && dfsToastKeyed('save-error',`Cloud-Sync fehlgeschlagen (${res?.code||'error'})`,'error',4000); }
@@ -257,7 +257,7 @@
       const b=document.getElementById('save-retry'); if(b) b.disabled=true; statusCustomer.set('saving',{withSpinnerOn:'#btn-save-customer'});
       const c = collect();
       try{
-        const res = await window.dfsCloud.saveOne('dfs.customers', c.id, c);
+        const res = await window.dfsCloud.saveOne((window.DFS_COLLECTIONS&&DFS_COLLECTIONS.customers)||'dfs.customers', c.id, c);
         if(res && res.ok){ statusCustomer.set('saved',{withSpinnerOn:'#btn-save-customer'}); hideRetry(); window.dfsToastKeyed && dfsToastKeyed('save-ok','Gespeichert','success',1500); }
         else { setErrorDirty('#btn-save-customer'); if(b) b.disabled=false; showRetry(); window.dfsToastKeyed && dfsToastKeyed('save-error',`Cloud-Sync fehlgeschlagen (${res?.code||'unknown'})`,'error',4000); }
         if(window.dfs && window.dfs.debug) console.info('[DFS] save-retry', res);
