--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>DFS Versicherungsanalyse</title>
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="./styles/base.css">
+  <link rel="stylesheet" href="./styles/debug-console.css">
   <script src="./scripts/nav.js"></script>
   <script src="./scripts/format.js"></script>
   <script src="./scripts/toast.js"></script>
@@ -95,11 +96,32 @@
 
   <!-- Toast -->
   <div id="toast" class="toast">OK</div>
+  <!-- New Debug Console -->
+  <div id="dfs-debug" class="dfsdbg" aria-live="polite" aria-label="Debug-Konsole" hidden>
+    <div class="dfsdbg__head">
+      <strong>Debug-Mode</strong>
+      <span class="dfsdbg__meta" id="dfs-debug-meta"></span>
+      <div class="dfsdbg__actions">
+        <button id="dfsdbg-copy"  title="Alles kopieren">Kopieren</button>
+        <button id="dfsdbg-save"  title="Als TXT speichern">Als TXT</button>
+        <button id="dfsdbg-pause" title="Logging pausieren">Pausieren</button>
+        <button id="dfsdbg-clear" title="Alle Einträge löschen">Löschen</button>
+        <button id="dfsdbg-close" title="Konsole schließen">×</button>
+      </div>
+    </div>
+    <div class="dfsdbg__body" id="dfs-debug-body"></div>
+    <div class="dfsdbg__foot">
+      <label><input type="checkbox" id="dfsdbg-f-info"  checked> Info</label>
+      <label><input type="checkbox" id="dfsdbg-f-warn"  checked> Warn</label>
+      <label><input type="checkbox" id="dfsdbg-f-error" checked> Error</label>
+    </div>
+  </div>
 
   <!-- Firebase + Bridge -->
   <script type="module" src="./scripts/firebaseClient.js"></script>
   <script type="module" src="./scripts/firebase.js"></script>
   <script src="./scripts/dfs-cloud.js"></script>
+  <script src="./scripts/debug-console.js"></script>
   <script src="./scripts/devmenu.js"></script>
   
   <!-- Cache-Busting Helper -->
