fix(firestore): single init helpers + healthcheck; unified health checks before save; dashboard health log; network enable on init

--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -165,6 +165,7 @@
         isSaving = true;
         try{
           status.set('saving',{withSpinnerOn:'#btn-save-contract'});
+          try{ const hc = await (window.dfsFirebase&&dfsFirebase.healthcheck? dfsFirebase.healthcheck():Promise.resolve({ok:true})); if(!hc.ok){ status.set('error',{withSpinnerOn:'#btn-save-contract'}); const s=document.getElementById('save-status-contract'); if(s) s.textContent='Ungespeichert (Fehler)'; const rb=document.getElementById('save-retry'); if(rb) rb.style.display='inline-flex'; window.dfsToastKeyed && dfsToastKeyed('save-error','Cloud offline','error',4000); return; } }catch{}
           const c= (window.collectContractFromForm? collectContractFromForm():null);
           if(!c){ status.set('error',{withSpinnerOn:'#btn-save-contract'}); return; }
           const res = await dfsCloud.saveOne((window.DFS_COLLECTIONS&&DFS_COLLECTIONS.contracts)||'dfs.contracts', c.id, c);
@@ -184,6 +185,7 @@
           if(isSaving) return; isSaving=true;
           const rb=document.getElementById('save-retry'); if(rb) rb.disabled=true;
           status.set('saving',{withSpinnerOn:'#btn-save-contract'});
+          try{ const hc = await (window.dfsFirebase&&dfsFirebase.healthcheck? dfsFirebase.healthcheck():Promise.resolve({ok:true})); if(!hc.ok){ status.set('error',{withSpinnerOn:'#btn-save-contract'}); const s=document.getElementById('save-status-contract'); if(s) s.textContent='Ungespeichert (Fehler)'; if(rb){ rb.disabled=false; rb.style.display='inline-flex'; } window.dfsToastKeyed && dfsToastKeyed('save-error','Cloud offline','error',4000); isSaving=false; return; } }catch{}
           const c= (window.collectContractFromForm? collectContractFromForm():null);
           const res = await dfsCloud.saveOne((window.DFS_COLLECTIONS&&DFS_COLLECTIONS.contracts)||'dfs.contracts', c.id, c);
           if(res && res.ok){ dirty=false; status.set('saved',{withSpinnerOn:'#btn-save-contract'}); if(rb){ rb.disabled=false; rb.style.display='none'; } window.dfsToastKeyed && dfsToastKeyed('save-ok','Gespeichert','success',1500); }
