chore(core): enforce cloud-only; remove local store & offline persistence; unify cloud API; calm logs/toasts; add config banner

--- a/modules/dashboard/index.html
+++ b/modules/dashboard/index.html
@@ -9,6 +9,7 @@
   <script src="../../scripts/format.js"></script>
   <script src="../../scripts/toast.js"></script>
   <script src="../../scripts/date.js"></script>
+  <script src="../../scripts/config.js"></script>
   <script src="../../scripts/storage.js"></script>
   <script type="module" src="../../scripts/firebase.js"></script>
   <script type="module" src="../../scripts/data-contracts.js"></script>
