--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="./scripts/format.js"></script>
   <script src="./scripts/toast.js"></script>
   <script src="./scripts/date.js"></script>
+  <script src="./scripts/config.js"></script>
   <script src="./scripts/storage.js"></script>
   <script src="./scripts/io.js"></script>
   <style>
