--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -11,6 +11,7 @@
   <script src="../../scripts/ui.js"></script>
   <script src="../../scripts/nav.js"></script>
   <script src="../../scripts/date.js"></script>
+  <script src="../../scripts/config.js"></script>
   <script src="../../scripts/storage.js"></script>
   <script type="module" src="../../scripts/firebase.js"></script>
   <script src="../../scripts/dfs-cloud.js"></script>
